# Compute-Stress-Studio

./: .dockerignore  .gitignore  Dockerfile.gpu  README.md  cpu_stress_cli.py  docker-compose.gpu.yml  gpu_stress_background.py  gpu_stress_cli.py  gpu_stress_portable.py  requirements-gpu.txt
.github/workflows/: diagnose-juce-core.yml  diagnose-juce-linux.yml  diagnose-juce-windows.yml  diagnose-linux-portable.yml  flutter-format-once.yml  flutter-stress-studio.yml  patch-flutter-product-copy.yml  pr11-format-source.yml  python-cli-tests.yml  release-gpu-packages.yml  release-juce-backup.yml  release-notes-maintenance.yml
apps/stress_studio/: README.md  analysis_options.yaml  pubspec.yaml
apps/stress_studio/lib/: main.dart
apps/stress_studio/lib/src/: app_owner.dart  controller.dart  model.dart  services.dart  studio_app.dart  theme.dart
apps/stress_studio/test/: controller_test.dart  model_test.dart  services_test.dart  widget_test.dart
docs/: DEVELOPMENT.md  FLUTTER_STRESS_STUDIO_SPEC.md  GPU_STRESS.md  JUCE_WAVEMIX_BACKUP_GUIDE.md  PACKAGING.md  QUADRO_P2200_PERSONAL_PRESET.md  README.md  RELEASES.md
docs/releases/: LAST_RELEASE_MAINTENANCE.md  NEXT.md  compute-stress-studio-v0.2.0.md  stress-studio-v0.1.14.md
native-cpu/: CMakeLists.txt
native-cpu/include/ComputeStressCpu/: Config.h  Engine.h
native-cpu/src/: Config.cpp  Engine.cpp  MainPosix.cpp  MainWindows.cpp
native-cpu/tests/: CpuStressTests.cpp
native-juce/: CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md
native-juce/include/GpuStressBackup/: AppConfig.h  BackgroundRunner.h  DutyScheduler.h  MainComponent.h  MainWindow.h  RunLogger.h  StressBackend.h  StressEngine.h  Telemetry.h
native-juce/packaging/appimage/: AppRun  gpu-stress-juce.desktop
native-juce/packaging/windows/: CHECK-JUCE-BACKUP.cmd  START-JUCE-BACKUP-BACKGROUND.cmd  START-JUCE-BACKUP-GUI.cmd  STOP-JUCE-BACKUP.cmd
native-juce/src/: AppConfig.cpp  BackgroundRunner.cpp  CliMain.cpp  CudaWaveMixBackend.cu  DutyScheduler.cpp  JuceApplication.cpp  MainComponent.cpp  MainWindow.cpp  NvidiaSmiTelemetry.cpp  RunLogger.cpp  StressEngine.cpp  SyntheticStressBackend.cpp
native-juce/tests/: AppConfigTests.cpp  DutySchedulerTests.cpp  RunLoggerTests.cpp  StressEngineTests.cpp  TestHarness.h  TestMain.cpp
packaging/: PORTABLE_README.txt  START-P2200-96H-87.cmd  STOP-P2200-GPU-STRESS.cmd  gpu_stress_background.spec  gpu_stress_portable.spec
packaging/appimage/: AppRun  gpu-stress.desktop
patches/: pr11-ui-trigger
release/compute-stress-studio/: v0.2.0.json
scripts/: run_gpu_docker.ps1  run_gpu_docker.sh
tests/: test_gpu_stress_background.py  test_gpu_stress_cli.py  test_gpu_stress_portable.py
